# tee-s3

./: Cargo.toml  README.md  test.py
.github/workflows/: clippy.yaml
src/: main.rs
