[package]
authors = ["Yuxuan Lu <i@yuxuan.lu>"]
categories = ["command-line-utilities"]
description = "A command-line utility that streams stdin to both stdout and Amazon S3, similar to the Unix `tee` command but with S3 as an output."
edition = "2021"
homepage = "https://github.com/leoleoasd/tee-s3"
keywords = ["s3", "tee", "aws", "cli"]
license = "MIT"
name = "tee-s3"
readme = "README.md"
repository = "https://github.com/leoleoasd/tee-s3"
version = "0.1.0"

[dependencies]
aws-config = "1.5.14"
aws-sdk-s3 = "1.69.0"
bytes = "1.0"
clap = {version = "4", features = ["derive"]}
tokio = {version = "1.0", features = ["full"]}
